{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 26,
  "lineage": "6a23ce51-4ab4-8bad-1933-68e304651919",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:094840069693:instance/i-02345e6980f04f1cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02345e6980f04f1cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "open-invite-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08404362f7c49ea9c",
            "private_dns": "ip-10-0-1-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-13-221-121-104.compute-1.amazonaws.com",
            "public_ip": "13.221.121.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "staging",
                  "ManagedBy": "Terraform",
                  "Project": "open-invite"
                },
                "tags_all": {
                  "Environment": "staging",
                  "ManagedBy": "Terraform",
                  "Project": "open-invite"
                },
                "throughput": 0,
                "volume_id": "vol-0fb2cb9f7fd25844b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fea4d888c5c0c06",
            "tags": {
              "Name": "open-invite-staging-backend",
              "Type": "Backend"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-backend",
              "Project": "open-invite",
              "Type": "Backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0039d69342c7d1f4e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:094840069693:instance/i-0fff50e2586ab3bd7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fff50e2586ab3bd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "open-invite-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007387e68f4d4e9bf",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-13-218-16-75.compute-1.amazonaws.com",
            "public_ip": "13.218.16.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "staging",
                  "ManagedBy": "Terraform",
                  "Project": "open-invite"
                },
                "tags_all": {
                  "Environment": "staging",
                  "ManagedBy": "Terraform",
                  "Project": "open-invite"
                },
                "throughput": 0,
                "volume_id": "vol-0d84a4811c02e395c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fea4d888c5c0c06",
            "tags": {
              "Name": "open-invite-staging-frontend",
              "Type": "Frontend"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-frontend",
              "Project": "open-invite",
              "Type": "Frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e271b2da1d4e0739"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:094840069693:instance/i-053df3e9da4e4115c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053df3e9da4e4115c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "open-invite-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0153a09a644c3ac72",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-34-235-131-47.compute-1.amazonaws.com",
            "public_ip": "34.235.131.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "staging",
                  "ManagedBy": "Terraform",
                  "Project": "open-invite"
                },
                "throughput": 125,
                "volume_id": "vol-030212ad6e8b10f8e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fea4d888c5c0c06",
            "tags": {
              "Name": "open-invite-staging-jenkins"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-jenkins",
              "Project": "open-invite"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a241df8c1fdcdad9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:internet-gateway/igw-04bac52a60bcfec5f",
            "id": "igw-04bac52a60bcfec5f",
            "owner_id": "094840069693",
            "tags": {
              "Name": "open-invite-staging-igw"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-igw",
              "Project": "open-invite"
            },
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:route-table/rtb-002c86421a65db60b",
            "id": "rtb-002c86421a65db60b",
            "owner_id": "094840069693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bac52a60bcfec5f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "open-invite-staging-public-rt"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-public-rt",
              "Project": "open-invite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367ab007847c0629",
            "route_table_id": "rtb-002c86421a65db60b",
            "subnet_id": "subnet-06fea4d888c5c0c06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d8dc6bfe32fc80",
            "route_table_id": "rtb-002c86421a65db60b",
            "subnet_id": "subnet-0952f101168e6a688"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:security-group/sg-0039d69342c7d1f4e",
            "description": "Security group for backend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0039d69342c7d1f4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "76.245.196.39/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "open-invite-staging-backend-sg",
            "name_prefix": "",
            "owner_id": "094840069693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open-invite-staging-backend-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-backend-sg",
              "Project": "open-invite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:security-group/sg-0acaac0795a92d51a",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acaac0795a92d51a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0039d69342c7d1f4e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "open-invite-staging-database-sg",
            "name_prefix": "",
            "owner_id": "094840069693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open-invite-staging-database-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-database-sg",
              "Project": "open-invite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:security-group/sg-0e271b2da1d4e0739",
            "description": "Security group for frontend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e271b2da1d4e0739",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "76.245.196.39/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "open-invite-staging-frontend-sg",
            "name_prefix": "",
            "owner_id": "094840069693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open-invite-staging-frontend-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-frontend-sg",
              "Project": "open-invite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:security-group/sg-0a241df8c1fdcdad9",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a241df8c1fdcdad9",
            "ingress": [
              {
                "cidr_blocks": [
                  "76.245.196.39/32"
                ],
                "description": "Jenkins web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "76.245.196.39/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "open-invite-staging-jenkins-sg",
            "name_prefix": "",
            "owner_id": "094840069693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open-invite-staging-jenkins-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-jenkins-sg",
              "Project": "open-invite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:subnet/subnet-06fea4d888c5c0c06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fea4d888c5c0c06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094840069693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "open-invite-staging-public-subnet-1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-public-subnet-1",
              "Project": "open-invite"
            },
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:subnet/subnet-0952f101168e6a688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0952f101168e6a688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094840069693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "open-invite-staging-public-subnet-2"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-public-subnet-2",
              "Project": "open-invite"
            },
            "vpc_id": "vpc-0b8d04e4331ba28b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094840069693:vpc/vpc-0b8d04e4331ba28b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c7649ce41b56f6e6",
            "default_route_table_id": "rtb-04792944eaf87e40a",
            "default_security_group_id": "sg-01ab0fe4d2b2a72a1",
            "dhcp_options_id": "dopt-0db19403943309d73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8d04e4331ba28b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04792944eaf87e40a",
            "owner_id": "094840069693",
            "tags": {
              "Name": "open-invite-staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "open-invite-staging-vpc",
              "Project": "open-invite"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}